styling adjustments to prevent cutting off on smaller screens

--- a/styles/simulation.css
+++ b/styles/simulation.css
@@ -104,6 +104,13 @@
   height: 27rem;
 }
 
+.me-main-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  align-items: center;
+}
+
 .box-whisker-container {
   width: 100%;
   display: flex;
@@ -133,11 +140,11 @@
 }
 
 .vra-impact-table-header {
-  font-size: clamp(1.5rem, 1.3vw, 1.6rem);
+  font-size: clamp(1.4rem, 1.3vw, 1.6rem);
 }
 
 .vra-impact-table-data {
-  font-size: clamp(1rem, 0.9vw, 1.2rem);
+  font-size: clamp(1rem, 1vw, 1.2rem);
 }
 
 .meLabelsContainer {
@@ -166,7 +173,6 @@
   display: flex;
   justify-content: center;
   gap: 2rem;
-  padding-top: 0.25rem;
 }
 
 @media (max-width: 1400px) {
