--- a/styles/state-page.css
+++ b/styles/state-page.css
@@ -138,8 +138,9 @@
 }
 
 .districts-table-container {
-  width: 96%;
-  padding: clamp(0.5rem, 0.65vw, 1rem) clamp(1%, 1vw, 2%);
+  width: 100%;
+  padding: clamp(0.5rem, 0.65vw, 1rem) clamp(1%, 0.6vw, 2%);
+  box-sizing: border-box;
 }
 
 .districts-table {
@@ -150,18 +151,17 @@
 
 .districts-table-header,
 .districts-table-data {
-  padding: clamp(0.35rem, 0.45vw, 0.6rem);
-  line-height: 1.1;
+  padding: clamp(0.35rem, 0.4vw, 0.6rem);
   border: 1px solid;
   vertical-align: middle;
 }
 
 .districts-table-header {
-  font-size: clamp(1.5rem, 1.3vw, 1.6rem);
+  font-size: clamp(1.3rem, 1.3vw, 1.6rem);
 }
 
 .districts-table-data {
-  font-size: clamp(1rem, 0.9vw, 1.1rem);
+  font-size: clamp(0.9rem, 0.9vw, 1.1rem);
 }
 
 .districts-table-distnum:hover {
